--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <button id="generate-button">New Grid</button>
+    <div id="sketchpad-container">
+
+    </div>
 </body>
 </html>
