--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="generate-button">New Grid</button>
-    <div id="sketchpad-container">
-
+    <div id="content">
+        <button id="generate-button">New Grid</button>
     </div>
 </body>
 </html>
