--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="content">
         <button id="generate-button">New Grid</button>
+        <div id="sketchpad-container"></div>
     </div>
 </body>
 </html>
